--- a/index.html
+++ b/index.html
@@ -9,11 +9,33 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./css/syle.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
         <!-- header -->
         <header>
+            <div class="navbar-row">
+                <div class="navbar-col">
+                    <div class="navbar-content">
+                        <div class="left-content">
+                            <img src="./img/logo-small.png" alt="dropbox-logo" class="logo">
+                            <div class="left-navbar-options">
+                                <a href="#" class="left-menu">Perchè Dropbox</a>
+                                <a href="#" class="left-menu">Funzioni</a>
+                                <a href="#" class="left-menu">Piani e Prezzi</a>
+                            </div> 
+                        </div>
+                        <div class="right-content">
+                            <div class="right-navbar-options">
+                                <a href="#" class="right-menu">Supporto</a>
+                                <a href="#" class="right-menu">Contatta l'ufficio vendite</a>
+                                <a href="#" class="right-menu">Accedi</a>
+                                <button class="button header-button">Inizia</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </header>  
         <!-- fine header  -->
         <!-- main -->
