--- a/index.html
+++ b/index.html
@@ -40,6 +40,29 @@
         <!-- fine header  -->
         <!-- main -->
         <main>
+            <!-- sezione " Tuttò ciò che ti serve per il lavoro" -->
+            <div class="jumbotron-1">
+                <div class="container-1170">
+                    <h1>Tutto ciò che ti serve per il <br> lavoro, in un unico posto</h1>
+                     <div class="row">
+                        <div class="col-30-first">
+                            <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: 
+                                è un modo intelligente e integrato per ottimizzare il flusso del lavoro esistente.</p>
+                            <button class="button button-1">Inizia la tua prova gratuita</button>
+                            <span>Annulla in qualsiasi momento</span>
+                            <div class="arrow-down">
+                                <i class="fa-solid fa-arrow-down"></i>
+                            </div>
+                        </div>
+                        <div class="col-70-first">
+                            <div class="image-1-container">
+                                <img src="./img/jumbo.png" alt="image-1" class="image-1">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- fine sezione " Tuttò ciò che ti serve per il lavoro" -->
         </main>
         <!-- fine main -->
         <!-- footer -->
