second section done

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
                     <h1>Tutto ciò che ti serve per il <br> lavoro, in un unico posto</h1>
                      <div class="row">
                         <div class="col-30-first">
-                            <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: 
-                                è un modo intelligente e integrato per ottimizzare il flusso del lavoro esistente.</p>
+                            <p>
+                                Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di 
+                                uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso del lavoro esistente.
+                            </p>
                             <button class="button button-1">Inizia la tua prova gratuita</button>
                             <span>Annulla in qualsiasi momento</span>
                             <div class="arrow-down">
@@ -63,6 +65,120 @@
                 </div>
             </div>
             <!-- fine sezione " Tuttò ciò che ti serve per il lavoro" -->
+            <!-- sezione " Trova il piano business" -->
+            <div class="container-991">
+                <h2>Trova il piano business che fa per te</h2>
+                <!-- selezione fatturazione -->
+                <form action="#">
+                    <div class="radio-check">
+                        <input type="radio" value="fatturazione-mensile" name="fatturazione">
+                        <label for="fatturazione-mensile">Fatturazione mensile</label>
+                        <input type="radio" value="fatturazione-annuale" id="fatturazione-annuale" name="fatturazione">
+                        <label for="fatturazione-annuale">Fatturazione annuale</label>
+                    </div>
+                </form>
+                <!-- fine selezione fatturazione -->
+                <div class="container-991">
+                    <div class="row">
+                        <div class="col-30 col-30-border">
+                            <div class="col-30-content">
+                                <div class="subscription-plan">
+                                    <div><i class="fa-solid fa-user"></i> Singolo</div>
+                                </div>
+                                <div class="details">
+                                    <h3>Professional</h3>
+                                    <div class="price"><strong>&euro; 12.00</strong></div>
+                                    <div class="duration">/mese</div>
+                                    <ul>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-user"></i></div><div class="subscription-plan-function"> 1 utente</div></li>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-folder"></i></div><div class="subscription-plan-function">5 TB di spazio di archiviazione sicuro</div></li>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-share-nodes"></i></div><div class="subscription-plan-function">Funzioni di produttività premium e condivisione file semplice e sicura</div></li>
+                                    </ul>
+                                    <button class="button free-trial-button">Prova gratis per 30 giorni</button>
+                                    <span class="buy-now">oppure <a href="#">acquista ora</a></span>
+                                    <hr>
+                                    <h5>Punti Salienti del piano</h5>
+                                    <ul>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-check"></i></div><div class="subscription-plan-function">Invia file fino a 100 GB con Dropbox Transfer</div></li>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-check"></i></div><div class="subscription-plan-function">Cartelle offline su dispositivi mobili</div></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SECOND COL -->
+                        <div class="col-30 col-30-border">
+                            <div class="col-30-content">
+                                <div class="subscription-plan">
+                                    <div><i class="fa-solid fa-users"></i> Team</div>
+                                </div>
+                                <div class="details">
+                                    <h3>Advanced</h3>
+                                    <div class="price"><strong>&euro; 18.00</strong></div>
+                                    <div class="duration">/mese/utente</div>
+                                    <ul>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-users"></i></div><div class="subscription-plan-function"> 3 o piu utenti</div></li>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-folder"></i></div><div class="subscription-plan-function">Tutto lo spazio di cui ha bisogno il tuo team</div></li>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-share-nodes"></i></div><div class="subscription-plan-function"> Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</div></li>
+                                    </ul>
+                                    <button class="button free-trial-button">Prova gratis per 30 giorni</button>
+                                    <span class="buy-now">oppure <a href="#">acquista ora</a></span>
+                                    <hr>
+                                    <h5>Punti Salienti del piano</h5>
+                                    <ul>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-check"></i></div><div class="subscription-plan-function"> Nessun limite di spazio per i file</div></li>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-check"></i></div><div class="subscription-plan-function"> Cartelle offline su dispositivi mobili</div></li>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-check"></i></div><div class="subscription-plan-function"> Risparmio del 50% rispetto alle iscrizioni singole</div></li>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-check"></i></div><div class="subscription-plan-function"> Possibilità di inserire nuovi membri del team</div></li>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-check"></i></div><div class="subscription-plan-function"> Gestione dei permessi in base ai ruoli</div></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- THIRD COL -->
+                        <div class="col-30 col-30-border">
+                            <div class="col-30-content">
+                                <div class="subscription-plan">
+                                    <div><i class="fa-solid fa-building"></i> Azienda</div>
+                                </div>
+                                <div class="details">
+                                    <h3>Enterprise</h3>
+                                    <div class="price"><strong>Contattaci</strong></div>
+                                    <div class="duration"><strong>-</strong></div>
+                                    <ul>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-user"></i></div><div class="subscription-plan-function"> 10 o più utenti</div></li>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-folder"></i></div><div class="subscription-plan-function">Soluzioni personalizzabili per la tua azienda</div></li>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-share-nodes"></i></div><div class="subscription-plan-function">Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</div></li>
+                                    </ul>
+                                    <button class="button free-trial-button">Contattaci</button>
+                                    <span class="buy-now">oppure <a href="#">acquista ora</a></span>
+                                    <hr>
+                                    <h5>Punti Salienti del piano</h5>
+                                    <ul>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-check"></i></div><div class="subscription-plan-function"> Cartelle offline su dispositivi mobili</div></li>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-check"></i></div><div class="subscription-plan-function"> Servizio assistenza 24/h</div></li>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-check"></i></div><div class="subscription-plan-function"> Possibilità di personalizzazione totale</div></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- 100 col -->
+                        <div class="col-100 col-100-border">
+                            <div class="col-100-content">
+                                <div class="subscription-plan ">
+                                    <div class="col-100-subscription-plan"><i class="fa-solid fa-building"></i> Team</div>
+                                </div>
+                                <div class="col-100-text">
+                                    <h3>Enterprise</h3>
+                                    <h5>Contatta l'ufficcio venditore per i prezzi</h5>
+                                    <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
+                                </div>
+                                <button class="button contact-button">Contatta l'ufficcio vendite</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- fine sezione " Trova il piano business" -->
         </main>
         <!-- fine main -->
         <!-- footer -->
