third section done

--- a/index.html
+++ b/index.html
@@ -179,6 +179,24 @@
                 </div>
             </div>
             <!-- fine sezione " Trova il piano business" -->
+            <!-- sezione Entra in contatto con un partner -->
+            <div class="container-991">             
+                <div class="row row-60">
+                    <div class="col-60">
+                        <img src="./img/partner.png" alt="dropbox-partner">
+                    </div>
+                    <div class="col-40">
+                        <div class="col-40-content">
+                            <h3>Entra in contatto con un partner Dropbox</h3>
+                            <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per 
+                                raggiunger i tuoi obbietivi aziendali, tra cui implementazione, integfrazione, gestione e supporto continui.
+                            </p>
+                            <button class="find-partner-button">Trova un partner</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- fine sezione Entra in contatto con un partner -->
         </main>
         <!-- fine main -->
         <!-- footer -->
