fourth section done

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                     </div>
                 </form>
                 <!-- fine selezione fatturazione -->
+                <!-- container piano business singolo -->
                 <div class="container-991">
                     <div class="row">
                         <div class="col-30 col-30-border">
@@ -105,7 +106,8 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- SECOND COL -->
+                        <!-- fine container piano business singolo -->
+                        <!-- container piano business team advanced -->
                         <div class="col-30 col-30-border">
                             <div class="col-30-content">
                                 <div class="subscription-plan">
@@ -134,7 +136,8 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- THIRD COL -->
+                        <!-- fine container piano business team advanced -->
+                        <!-- container piano business azienda -->
                         <div class="col-30 col-30-border">
                             <div class="col-30-content">
                                 <div class="subscription-plan">
@@ -161,7 +164,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- 100 col -->
+                        <!-- container piano business team enterprise -->
                         <div class="col-100 col-100-border">
                             <div class="col-100-content">
                                 <div class="subscription-plan ">
@@ -178,6 +181,7 @@
                     </div>
                 </div>
             </div>
+            <!-- fine container piano business team enterprise -->
             <!-- fine sezione " Trova il piano business" -->
             <!-- sezione Entra in contatto con un partner -->
             <div class="container-991">             
@@ -197,6 +201,67 @@
                 </div>
             </div>
             <!-- fine sezione Entra in contatto con un partner -->
+            <!-- sezione Esegui più operazione con Dropbox Business -->
+            <div class="container-991">
+                <h2>Esegui piu operazioni con Dropbox Business</h2>
+                <div class="row">
+                    <div class="col-30">
+                        <div class="col-30-content">
+                            <img src="./img/business-feature-switching-tools.png" alt="switching-tools-feature">
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Porta a termine le attivita quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, 
+                                Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-30">
+                        <div class="col-30-content">
+                            <img src="./img/business-feature-send-files-it.png" alt="send-files-feature">
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Porta a termine le attivita quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, 
+                                Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-30">
+                        <div class="col-30-content">
+                            <img src="./img/business-feature-coordinate-it.png" alt="coordinate-feature">
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Porta a termine le attivita quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, 
+                                Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-30">
+                        <div class="col-30-content">
+                            <img src="./img/business-feature-integrations-it.png" alt="integrations-feature">
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Porta a termine le attivita quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, 
+                                Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-30">
+                        <div class="col-30-content">
+                            <img src="./img/business-feature-multi-device.png" alt="multi-device-feature">
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Porta a termine le attivita quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, 
+                                Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-30">
+                        <div class="col-30-content">
+                            <img src="./img/business-feature-security.png" alt="security-feature">
+                            <h4>Passa di meno da uno strumento all'altro</h4>
+                            <p>Porta a termine le attivita quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, 
+                                Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- fine sezione Esegui più operazione con Dropbox Business -->
         </main>
         <!-- fine main -->
         <!-- footer -->
