fifth section done

--- a/index.html
+++ b/index.html
@@ -262,6 +262,18 @@
                 </div>
             </div>
             <!-- fine sezione Esegui più operazione con Dropbox Business -->
+            <!-- sezione Più di 500.000 team utilizzano Dropbox Business -->
+            <div class="container-991">
+                <div class="row">
+                    <div class="col-100">
+                        <div class="col-100-content">
+                            <h2>Più di 500.000 team utilizzano <br> Dropbox Business</h2>
+                            <a href="#">Scopri di più sui nostri clienti</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- fine sezione Più di 500.000 team utilizzano Dropbox Business -->
         </main>
         <!-- fine main -->
         <!-- footer -->
