sixth section done

--- a/index.html
+++ b/index.html
@@ -274,6 +274,72 @@
                 </div>
             </div>
             <!-- fine sezione Più di 500.000 team utilizzano Dropbox Business -->
+            <!-- sezione Designit -->
+            <div class="logos-container">
+                <div class="row height">
+                    <div class="col-33">
+                        <div class="row height">
+                            <div id="background-light-green" class="col-50">
+                                <div class="squares"> 
+                                    <img src="./img/designit.svg" alt="designit">
+                                </div>
+                            </div>
+                            <div id="background-dark-red" class="col-50">
+                                <div class="squares"> 
+                                    <img src="./img/arizona_state_university.svg" alt="arizona-state-university">
+                                </div>
+                            </div>
+                            <div id="background-sky-blue" class="col-50">
+                                <div class="squares"> 
+                                    <img src="./img/university_of_florida.svg" alt="university-of-florida">
+                                </div>
+                            </div>
+                            <div class="col-50 background-red">
+                                <div class="squares"> 
+                                    <img src="./img/topps.svg" alt="topps">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-33">
+                        <div class="designit-content">
+                            <div class="designit-img">
+                                <img src="./img/designit.svg" alt="designit">
+                            </div>
+                            <hr class="designit-logo">
+                            <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. 
+                                Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. 
+                                Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
+                            <span>Morten Thomsen, Global IT Lead</span>
+                        </div>
+                    </div>
+                    <div class="col-33">
+                        <div class="row height">
+                            <div class="col-50 background-red">
+                                <div class="squares"> 
+                                    <img src="./img/world_bicycle_relief.svg" alt="bicicle-relief">
+                                </div>
+                            </div>
+                            <div id="background-light-blue" class="col-50">
+                                <div class="squares"> 
+                                    <img src="./img/hearst_corp.svg" alt="hearst-corp">
+                                </div>
+                            </div>
+                            <div id="background-blue" class="col-50">
+                                <div class="squares"> 
+                                    <img src="./img/lonely_planet.svg" alt="lonely-planet">
+                                </div>
+                            </div>
+                            <div id="background-yellow" class="col-50">
+                                <div class="squares"> 
+                                    <img src="./img/clear_channel.svg" alt="clear-channel">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- fine sezione Designit -->
         </main>
         <!-- fine main -->
         <!-- footer -->
