seventh section done

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                                     <img src="./img/designit.svg" alt="designit">
                                 </div>
                             </div>
-                            <div id="background-dark-red" class="col-50">
+                            <div class="col-50 background-bordeaux">
                                 <div class="squares"> 
                                     <img src="./img/arizona_state_university.svg" alt="arizona-state-university">
                                 </div>
@@ -320,7 +320,7 @@
                                     <img src="./img/world_bicycle_relief.svg" alt="bicicle-relief">
                                 </div>
                             </div>
-                            <div id="background-light-blue" class="col-50">
+                            <div class="col-50 background-light-blue">
                                 <div class="squares"> 
                                     <img src="./img/hearst_corp.svg" alt="hearst-corp">
                                 </div>
@@ -340,6 +340,20 @@
                 </div>
             </div>
             <!-- fine sezione Designit -->
+            <!-- sezione Porta Dropbox Business nella tua azienda -->
+            <div class="background-light-blue">
+                <div class="container-1170">
+                    <div class="row">
+                        <div class="col-50">
+                            <h2 id="bring-dropbox-text">Porta Dropbox Business nella tua azienda.</h2>
+                        </div>
+                        <div class="col-50">
+                            <button class="free-trial-button-2">Inizia la tua prova gratuita</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- fine sezione Porta Dropbox Business nella tua azienda -->
         </main>
         <!-- fine main -->
         <!-- footer -->
