eighth section done

--- a/index.html
+++ b/index.html
@@ -354,6 +354,29 @@
                 </div>
             </div>
             <!-- fine sezione Porta Dropbox Business nella tua azienda -->
+            <!-- sezione Domande frequenti -->
+            <div class="container-991">
+                <h2 id="recurring-questions">Domande frequenti</h2>
+                <div class="row-questions">
+                    <div class="col-100-questions">
+                        <div><strong>Qual è la differenza tra Dropbox Business Standart e Dropbox Business Advanced?</strong></div>
+                        <div class="hidden-menu"><i class="fa-solid fa-angle-down"></i></div>
+                    </div>
+                </div>
+                <div class="row-questions">
+                    <div class="col-100-questions">
+                        <div><strong>Qual è la differenza tra Dropbox Business Standart e Dropbox Business Advanced?</strong></div>
+                        <div class="hidden-menu"><i class="fa-solid fa-angle-down"></i></div>
+                    </div>
+                </div>
+                <div class="row-questions">
+                    <div id="border-bottom-questions" class="col-100-questions">
+                        <div><strong>Qual è la differenza tra Dropbox Business Standart e Dropbox Business Advanced?</strong></div>
+                        <div class="hidden-menu"><i class="fa-solid fa-angle-down"></i></div>
+                    </div>
+                </div>
+            </div>
+            <!-- fine sezione Domande frequenti -->
         </main>
         <!-- fine main -->
         <!-- footer -->
