--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                     <ul>
                                         <li class="list-items"><div class="icon"><i class="fa-solid fa-users"></i></div><div class="subscription-plan-function"> 3 o piu utenti</div></li>
                                         <li class="list-items"><div class="icon"><i class="fa-solid fa-folder"></i></div><div class="subscription-plan-function">Tutto lo spazio di cui ha bisogno il tuo team</div></li>
-                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-share-nodes"></i></div><div class="subscription-plan-function"> Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</div></li>
+                                        <li class="list-items"><div class="icon"><i class="fa-solid fa-share-nodes"></i></div><div class="subscription-plan-function"> Sofisticate Funzioni di controllo e per tenere al sicuro tutti i file del tuo team</div></li>
                                     </ul>
                                     <button class="button free-trial-button">Prova gratis per 30 giorni</button>
                                     <span class="buy-now">oppure <a href="#">acquista ora</a></span>
@@ -360,19 +360,19 @@
                 <div class="row-questions">
                     <div class="col-100-questions">
                         <div><strong>Qual è la differenza tra Dropbox Business Standart e Dropbox Business Advanced?</strong></div>
-                        <div class="hidden-menu"><i class="fa-solid fa-angle-down"></i></div>
+                        <div><i class="fa-solid fa-angle-down"></i></div>
                     </div>
                 </div>
                 <div class="row-questions">
                     <div class="col-100-questions">
                         <div><strong>Qual è la differenza tra Dropbox Business Standart e Dropbox Business Advanced?</strong></div>
-                        <div class="hidden-menu"><i class="fa-solid fa-angle-down"></i></div>
+                        <div><i class="fa-solid fa-angle-down"></i></div>
                     </div>
                 </div>
                 <div class="row-questions">
                     <div id="border-bottom-questions" class="col-100-questions">
                         <div><strong>Qual è la differenza tra Dropbox Business Standart e Dropbox Business Advanced?</strong></div>
-                        <div class="hidden-menu"><i class="fa-solid fa-angle-down"></i></div>
+                        <div><i class="fa-solid fa-angle-down"></i></div>
                     </div>
                 </div>
             </div>
@@ -381,6 +381,75 @@
         <!-- fine main -->
         <!-- footer -->
         <footer>
+            <footer>
+                <div class="footer-jumbotron">
+                    <div class="container-1170">
+                        <div class="row">
+                            <div class="col-20">
+                                <h3>Dropbox</h3>
+                                <ul>
+                                    <li class="footer-list">Applicazione desktop</li>
+                                    <li class="footer-list">Perchè Dropbox</li>
+                                    <li class="footer-list">Piani</li>
+                                    <li class="footer-list">Funzioni</li>
+                                </ul>
+                            </div>
+                            <div class="col-20">
+                                <h3>Prodotti</h3>
+                                <ul>
+                                    <li class="footer-list">Applicazione desktop</li>
+                                    <li class="footer-list">Perchè Dropbox</li>
+                                    <li class="footer-list">Piani</li>
+                                    <li class="footer-list">Funzioni</li>
+                                </ul>
+                            </div>
+                            <div class="col-20">
+                                <h3>Azienda</h3>
+                                <ul>
+                                    <li class="footer-list">Applicazione desktop</li>
+                                    <li class="footer-list">Perchè Dropbox</li>
+                                    <li class="footer-list">Piani</li>
+                                    <li class="footer-list">Funzioni</li>
+                                </ul>
+                            </div>
+                            <div class="col-20">
+                                <h3>Supporto</h3>
+                                <ul>
+                                    <li class="footer-list">Applicazione desktop</li>
+                                    <li class="footer-list">Perchè Dropbox</li>
+                                    <li class="footer-list">Piani</li>
+                                    <li class="footer-list">Funzioni</li>
+                                </ul>
+                            </div>
+                            <div class="col-20">
+                                <h3>Community</h3>
+                                <ul>
+                                    <li class="footer-list">Applicazione desktop</li>
+                                    <li class="footer-list">Perchè Dropbox</li>
+                                    <li class="footer-list">Piani</li>
+                                    <li class="footer-list">Funzioni</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <hr class="footer-hr">
+                    </div>
+                    <div class="container-1170">
+                        <div class="row">
+                            <div class="col-100">
+                                <div class="footer-content">
+                                    <div><i class="fa-sharp fa-solid fa-earth-americas"></i></div>
+                                    <div class="language">
+                                        <select>
+                                        <option>Italiano</option>
+                                        <option>English</option>
+                                        <option>French</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>    
+                </div>
         </footer>
         <!-- fine footer -->
     </body>
