grammatical error corrected

--- a/index.html
+++ b/index.html
@@ -359,19 +359,19 @@
                 <h2 id="recurring-questions">Domande frequenti</h2>
                 <div class="row-questions">
                     <div class="col-100-questions">
-                        <div><strong>Qual è la differenza tra Dropbox Business Standart e Dropbox Business Advanced?</strong></div>
+                        <div><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></div>
                         <div><i class="fa-solid fa-angle-down"></i></div>
                     </div>
                 </div>
                 <div class="row-questions">
                     <div class="col-100-questions">
-                        <div><strong>Qual è la differenza tra Dropbox Business Standart e Dropbox Business Advanced?</strong></div>
+                        <div><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></div>
                         <div><i class="fa-solid fa-angle-down"></i></div>
                     </div>
                 </div>
                 <div class="row-questions">
                     <div id="border-bottom-questions" class="col-100-questions">
-                        <div><strong>Qual è la differenza tra Dropbox Business Standart e Dropbox Business Advanced?</strong></div>
+                        <div><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></div>
                         <div><i class="fa-solid fa-angle-down"></i></div>
                     </div>
                 </div>
